--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebrowser",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "electron web browser",
   "main": "webview.js",
   "scripts": {
@@ -9,6 +9,11 @@
   },
   "author": "Richard H. Cao",
   "keywords": ["browser","minimal","suckless","command line","vim key map","user scripts"],
+  "license": "GPL-3.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/torappinfo/ebrowser.git"
+  },
   "build": {
     "appId": "torapp.eweb",
     "publish": "github",
