--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
-# Action 名称，可自定义
 name: Build/release
 
-# 触发事件：提交名称以 v 开头的 tag 时触发
 on:
   push:
     tags:
-      - 'v*.*'
+      - 'v*.*.*'
 
 jobs:
   release:
@@ -13,20 +11,16 @@ jobs:
 
     strategy:
       matrix:
-        # 运行环境：这里配置了 macos 和 windows，最终会在这两个环境打包
-        os: [macos-latest, windows-latest]
+        os: [macos-latest, windows-latest, ubuntu-latest]
 
-    # 执行步骤
     steps:
-      # 检出代码
       - name: Check out Git repository
         uses: actions/checkout@v4
 
-      # 安装环境
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
-          node-version: 21
+          node-version: 22
 
       - name: Build/release Electron app
         uses: classfang/action-electron-builder@v1.0.0
