--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     }
   },
   "dependencies": {
-    "electron":""
   },
   "devDependencies": {
+    "electron":"",
     "electron-builder": ""
   }
 }
