:update for app updating

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-{
+{"version":"1.0.21",
   "name": "ebrowser",
-  "version": "1.0.21",
   "description": "The keyboard-friendly minimal suckless web browser",
   "main": "webview.js",
   "scripts": {
