:bjs to execute Browser-level JavaScript

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "webview.js",
     "index.html",
     "package.json",
-    "README.md"
+    "README.md",
+    "mapkeys.json"
   ],
   "scripts": {
     "release": "electron-builder"
