--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"version":"1.0.67",
+{"version":"1.0.68",
   "name": "ebrowser",
   "description": "The keyboard-friendly minimal suckless web browser",
   "main": "webview.js",
@@ -8,7 +8,8 @@
     "package.json",
     "README.md",
     "translate.*",
-    "js/*.js"
+    "js/*.js",
+    "mapkeys.json"
   ],
   "scripts": {
     "release": "electron-builder"
